tests/tests/test038.expected
Error: syntax error, unterminated quoted atom, /home/andrew/trealla/tests/tests/test038.pl:3
